feat: implement header logo, links, input

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,15 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/no-explicit-any": ["error"]
+    "@typescript-eslint/no-explicit-any": ["error"],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
   }
 }
 //{
