--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+//    "module": "commonjs",
     "lib": ["esnext", "dom"],
     "jsx": "react",
     "strict": true,
@@ -13,7 +13,9 @@
     "baseUrl": "./src",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "module": "esnext",
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules", "build"]
 }
