feat: add styles for card

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
 //    "sourceType": "module"
 //  },
 //  "plugins": ["react", "@typescript-eslint", "react-hooks"],
-//  "ignorePatterns": ["jest.config.js", "*.css", "*.svg"],
+//  "ignorePatterns": ["jest.config.cjs", "*.css", "*.svg"],
 //  "rules": {
 //    "@typescript-eslint/no-misused-promises": "off",
 //    "no-use-before-define": "off",
